[package]
name = "day_08"
version = "0.1.0"
authors = ["Stefan Rupertsberger <s.rupertsberger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.9"
common = { path = "../common" }